...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.EventListView"
    android:id="@+id/eventListView">

    <include
        android:id="@+id/eventListToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </include>

    <include
        android:id="@+id/eventsTabbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        layout="@layout/event_tab_bar"
        app:layout_constraintTop_toBottomOf="@+id/eventListToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
...
