<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizerEventPoster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event.OrganizersEventPageActivity">

    <include
        layout="@layout/event_toolbar"
...
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollOrganizerPage"
        app:layout_constraintBottom_toTopOf="@+id/main_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationStatusTxt"
        app:layout_constraintVertical_bias="1.0"
...
                android:id="@+id/promo_qr_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/description_promo_qrcode"
                app:layout_constraintBottom_toTopOf="@id/signup_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGenPromoQR" />

            <CheckBox
                android:id="@+id/signup_button"
...
                app:layout_constraintTop_toBottomOf="@+id/promo_qr_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/openBottomSheetButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_keyboard_arrow_up_24"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/event_bottom_sheet"
...
