<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/event_bottom_sheet">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select an Option"
        android:textStyle="bold"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/White"
        android:padding="15dp"/>

    <LinearLayout
        android:id="@+id/viewCheckInQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/qrresize"
            android:drawablePadding="15dp"
            android:drawableTint="@color/OnSurface"
            android:paddingStart="20dp"
            android:paddingBottom="10dp"
            android:text="View Check-in QR Code"
            android:textColor="@color/White"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/createEventNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Post New Notification"
            android:textSize="20dp"
            android:textColor="@color/White"
            android:drawableLeft="@drawable/ic_notification_new"
            android:drawableTint="@color/OnSurface"
            android:drawablePadding="25dp"
            android:paddingStart="30dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSignedUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Signed Up"
            android:textSize="20dp"
            android:textColor="@color/White"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="25dp"
            android:paddingStart="30dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewEventCheckin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Participants"
            android:textSize="20dp"
            android:textColor="@color/White"
            android:drawableLeft="@drawable/ic_check_ins"
            android:drawableTint="@color/OnSurface"
            android:drawablePadding="25dp"
            android:paddingStart="30dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete Event"
            android:textSize="20dp"
            android:textColor="@color/Error"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_delete_forever_24"
            android:drawableTint="@color/Error"
            android:drawablePadding="25dp"
            android:paddingStart="30dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>