...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/shareQR"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/share"
            android:scaleType="fitCenter"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
...
            android:background="@android:color/transparent"
            android:tint="@color/White"
            android:paddingHorizontal="5dp">
        </ImageButton>

        <ImageView
            android:id="@+id/eventPosterImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/imagenotfound" />

...
